--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,7 +36,7 @@ body {
   font-family: "Overpass", sans-serif;
   /* color: var(--color-neutral-white); */
   font-weight: 300;
-  overflow-x: hidden;
+  width: 100vw;
 }
 
 h1 {
